--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <main id="main1">
         <div id="header">
-            <h1>Beer C<span class="gold-i">i</span>ty Grapah<span class="gold-i">i</span>cs</h1>
+            <h1>Beer C<span class="gold-i">i</span>ty Graph<span class="gold-i">i</span>cs</h1>
         </div>
         <div id="projects">
             <div class="img-wrapper">
